--- a/dev-desk-queue/src/App.css
+++ b/dev-desk-queue/src/App.css
@@ -1,3 +1,7 @@
+html{
+    background-color: rgba(159, 41, 126, 0.455);
+
+}
 .App {
   text-align: center;
 }
@@ -8,7 +12,7 @@
 }
 .nav-container{
   display:flex;
-  background-color: aqua;
+  background-color: rgba(86, 240, 240, 0.414);
   justify-content: space-around;
   border-bottom: 2px solid blue;
   padding: 2%;
@@ -25,3 +29,29 @@
 
 /* Body Start */
 /* Body End */
+/* Card Component Start */
+.card{
+  background-color:aqua;
+  border:2px solid red;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  width:30%;
+  margin:3% auto;
+  padding-bottom:15px;
+  border-radius:10px;
+}
+.haveTried{
+  margin:0 auto;
+  display:flex;
+  border:1px solid tan;
+  flex-direction: column;
+  align-items: baseline;
+  padding:1%;
+  
+}
+.subTitle{
+  font-weight: bold;
+}
+/* Card Component End */
