--- a/dev-desk-queue/src/components/CreateTicket/CreateTicket.css
+++ b/dev-desk-queue/src/components/CreateTicket/CreateTicket.css
@@ -20,15 +20,57 @@
     max-width: 800px;
     background-color: white;
     margin: auto;
-    padding: 20px;
-    border-radius: 4px;
+    padding: 3%;
+    border-radius: 12px;
 
+}
+
+.ticket h2{
+    font-size: 32px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin: 1% 0;
+}
+
+.red{
+    color: red;
+    font-size: 24px;
+    font-weight: normal;
+}
+
+.ticket p{
+    margin-bottom: 5%;
+}
+
+form label{
+    display: block;
+    margin-top: 4%;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+form input{
+    font-size: 18px;
+    border: none;
+    box-shadow: 2px 4px 10px rgba(0,0,0,.2);
+    background:white;
+}
+
+form select{
+    font-size: 18px;
+}
+
+form textarea{
+    font-size: 18px;
+    border-radius: 4px;
+    box-shadow: 2px 4px 10px rgba(0,0,0,.2);
+    background: white;
 }
 
 .close {
     color: #aaaaaa;
     float:right;
-    font-size: 16px;
+    font-size: 32px;
 }
 
 .close:hover, .close:focus {
