--- a/dev-desk-queue/src/components/Helper/HelperDashboard.css
+++ b/dev-desk-queue/src/components/Helper/HelperDashboard.css
@@ -98,7 +98,19 @@
     border: 2px solid #48C8E8;
     position: absolute;
     left: 90%;
-    top: 7%;
+    top:15%;
+    width: 5%;
+    cursor: pointer;
+    padding: .2% 0;
+}
+
+.detailed-card .delete{
+    background: #F2FCFF;
+    border-radius: 8px;
+    border: 2px solid #48C8E8;
+    position: absolute;
+    left: 82%;
+    top: 15%;
     width: 5%;
     cursor: pointer;
     padding: .2% 0;
