--- a/dev-desk-queue/src/components/CreateTicket/CreateTicket.css
+++ b/dev-desk-queue/src/components/CreateTicket/CreateTicket.css
@@ -20,7 +20,7 @@
     max-width: 800px;
     background-color: white;
     margin: auto;
-    padding: 3%;
+    padding: 2% 4%;
     border-radius: 12px;
 
 }
@@ -29,7 +29,7 @@
     font-size: 32px;
     font-weight: 600;
     letter-spacing: 1px;
-    margin: 1% 0;
+    /* margin: 1% 0; */
 }
 
 .red{
@@ -45,26 +45,45 @@
 form label{
     display: block;
     margin-top: 4%;
+    margin-bottom: 2%;
     font-size: 24px;
     font-weight: 600;
 }
 
 form input{
     font-size: 18px;
-    border: none;
-    box-shadow: 2px 4px 10px rgba(0,0,0,.2);
+    /* border: none; */
+    /* box-shadow: 2px 4px 10px rgba(0,0,0,.2); */
     background:white;
+    width: 80%;
 }
 
 form select{
     font-size: 18px;
+    padding: .5% 1%;
 }
 
 form textarea{
     font-size: 18px;
-    border-radius: 4px;
-    box-shadow: 2px 4px 10px rgba(0,0,0,.2);
+    /* border-radius: 4px; */
+    /* box-shadow: 2px 4px 10px rgba(0,0,0,.2); */
+    border: 1px solid black;
     background: white;
+    resize: none;
+}
+
+.submit-container{
+    text-align:center;
+}
+
+.submit{
+    width: 20%;
+    border: none;
+    border-radius: 12px;
+    margin: 2%;
+    padding: 2%;
+    background: #F0F0F0;
+    color: darkgrey;
 }
 
 .close {
