--- a/dev-desk-queue/src/components/CreateTicket/CreateTicket.css
+++ b/dev-desk-queue/src/components/CreateTicket/CreateTicket.css
@@ -58,6 +58,10 @@ form input{
     width: 80%;
 }
 
+.input-error{
+    border: 1px solid red;
+}
+
 form select{
     font-size: 18px;
     padding: .5% 1%;
@@ -82,8 +86,14 @@ form textarea{
     border-radius: 12px;
     margin: 2%;
     padding: 2%;
-    background: #F0F0F0;
-    color: darkgrey;
+    background: #0070EB;
+    color: white;
+}
+
+.error{
+    margin: 0;
+    padding: 0;
+    color: red;
 }
 
 .close {
@@ -96,4 +106,8 @@ form textarea{
     color: #000;
     text-decoration: none;
     cursor:pointer;
+}
+
+.hidden{
+    display: none;
 }
