styling tweaks to helper and student ticket previews which can now close

--- a/dev-desk-queue/src/components/Helper/HelperDashboard.css
+++ b/dev-desk-queue/src/components/Helper/HelperDashboard.css
@@ -184,3 +184,17 @@
     padding-left: 4%;
     white-space: nowrap;
 }
+
+.preview-window-header-div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: blue;
+}
+.preview-window-x{
+    color:red;
+}
+
+.preview-window-x:hover{
+    cursor: pointer;
+}
