--- a/dev-desk-queue/src/components/Student/StudentDashboard.css
+++ b/dev-desk-queue/src/components/Student/StudentDashboard.css
@@ -212,3 +212,19 @@
     padding: .2% 0;
     margin: 0 2%;
 }
+
+
+
+.preview-window-header-div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: blue;
+}
+.preview-window-x{
+    color:red;
+}
+
+.preview-window-x:hover{
+    cursor: pointer;
+}
